--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,8 @@
   --white-color: #ffffff;
   --black-color: #000000;
   --interactive-contacts-in-footer-color: rgba(255, 255, 255, 0.6);
-  --background-hero-and-footer: #2f303a;
+  --background-footer: #2f303a;
+  --background-hero: #C4C4C4;
   --background-color-second: #f5f4fa;
 }
 
@@ -213,10 +214,21 @@ header {
 /* Hero section*/
 
 .hero {
-  background-color: var(--background-hero-and-footer);
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
+
+  height: 600px;
+  max-width: 1600px;
+  
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero/hero-img.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: var(--background-hero);
 }
 
 .hero-heading {
@@ -427,7 +439,7 @@ header {
 .footer {
   padding: 60px 0;
 
-  background-color: var(--background-hero-and-footer);
+  background-color: var(--background-footer);
 }
 
 .footer .logo {
